Bug 248018 - Consistency check error message on new file
Summary: Consistency check error message on new file
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-16 04:38 UTC by Alvaro Soliverez
Modified: 2010-08-16 08:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Soliverez 2010-08-16 04:38:44 UTC
Version:           unspecified (using KDE 4.5.0) 
OS:                Linux


-----------------------------------Everything went well, except that when I hit 'finish' on the new file
wizard, I got a consistency check error  "The account 'Job' in currenty
'US Dollar' has no price set for the opening date '2010-08-15'.  Please
enter a price for the currency on or before the opening date."

The strange thing about this is that there is no account 'job' and the
income category job should not need a currency.  (USDollar is the base
currency.)

There is no error on any further consistency check.

I tried this twice with the same result, using slightly different
selected categories.
-----------------------------------

Reproducible: Always
Comment 1 Jack 2010-08-16 04:44:26 UTC
Minor point - this was built from source (svn) not Arch package, but the patch sent to the dev list does fix this for me.
Comment 2 Thomas Baumgart 2010-08-16 08:40:46 UTC
SVN commit 1164159 by tbaumgart:

Skip the price consistency check for accounts that don't have a security assigned (yet). This is caused by accounts created from templates and will automatically be fixed when loading the file the next time.

BUG: 248018

 M  +3 -1      mymoneyfile.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1164159