Skip the price consistency check for accounts that don't have a security assigned (yet). This is caused by accounts created from templates and will automatically be fixed when loading the file the next time.

BUG: 248018

svn path=/trunk/extragear/office/kmymoney/; revision=1164159